<resources>
    <string name="app_name">month4_lesson1</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update">Update</string>
    <string name="select_date">Select Date</string>
    <string name="are_you_sure_delete">\"Вы точно хотите удалить \"</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="by_date">По дате</string>
    <string name="by_alphabet">\"По алфавиту \"</string>
    <string name="sort_by">Сортировать по:</string>
    <string name="phone_number">Phone Number</string>
    <string name="send">Send</string>
    <string name="create_your_task">Create your task</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="get_time">Get Time</string>
    <string name="next">Next</string>
    <string name="skip">SKIP</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="sort">Sort</string>
    <string name="enter_phone_num">Введите номер телефона</string>
    <string name="enter_code">Enter code</string>
    <string name="confirm">Confirm</string>

</resources>