<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/back"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.new_task.NewTaskFragment">
    
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_task"
        android:layout_marginTop="25dp"
        app:boxStrokeColor="@color/black"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_title"

            />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_layout_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_layout_title"
        app:boxStrokeColor="@color/black"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_desc"

            />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/et_layout_desc"
        android:layout_marginTop="12dp"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingVertical="12dp"
        app:cornerRadius="12dp"
        android:backgroundTint="@color/black"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btn_save"
        android:layout_marginTop="8dp"
        android:text="@string/get_time"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingVertical="12dp"
        app:cornerRadius="12dp"
        android:backgroundTint="@color/black"
        />

    <TextView
        android:id="@+id/timerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/regular_muli"
       android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_time"


      />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_task"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/def_pic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_choose"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/text_choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_your_task"
        android:fontFamily="@font/regular_muli"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="25dp"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>